# SRDownscalling

./: README.md  WORKING_STEPS.md  pyproject.toml  requirements.txt  setup_and_train.sh
outputs/test/: synthetic_test.json
scripts/: quick_test.sh  run_test.py  synthetic_test.py  test_srdownscaling.py
src/: __init__.py  train.py
src/data/: __init__.py  dataset.py  wrf_sr_dataset.py
src/models/: __init__.py  blocks.py  esrgan.py  srgan.py  unet_sr.py
src/srdownscalling.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/training/: __init__.py  trainer.py
src/utils/: config.py
